--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,13 @@
 #Fill in dependencies here
+Click==7.0
+cupy-cuda100==5.2.0
+fastrlock==0.4
+Flask==1.0.2
+itsdangerous==1.1.0
+Jinja2==2.10
+llvmlite==0.27.0
+MarkupSafe==1.1.0
+numba==0.42.0
+numpy==1.16.0
+six==1.12.0
+Werkzeug==0.14.1
